KFSMI-10483: refactor arranger derived role type service to handle the TA and TR indicators a bit better